--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "whitenoise (>=6.9.0,<7.0.0)",
     "selenium (>=4.34.2,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
+    "celery-progress (>=0.5,<0.6)",
 ]
 
 
