--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   db:
     image: postgres:16-alpine
     container_name: default-db
+    env_file:
+      - .env
     environment:
       POSTGRES_DB: zipshare
       POSTGRES_USER: zipshare
@@ -15,59 +17,69 @@ services:
       retries: 5
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
     container_name: default-redis
+    env_file:
+      - .env
     ports:
       - "6379:6379"
 
   web:
     build: .
     container_name: default-web
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     volumes:
       - .:/app
     environment:
-      DJANGO_DEBUG: "True"
-      CELERY_BROKER_URL: "redis://redis:6379/0"
-      CELERY_RESULT_BACKEND: "redis://redis:6379/1"
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
     depends_on:
+      - db
       - redis
 
   worker:
     build: .
     container_name: default-worker
     command: ["celery", "-A", "config", "worker", "--loglevel=info"]
+    env_file:
+      - .env
     volumes:
       - .:/app
     environment:
-      DJANGO_DEBUG: "True"
-      CELERY_BROKER_URL: "redis://redis:6379/0"
-      CELERY_RESULT_BACKEND: "redis://redis:6379/1"
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
     depends_on:
-      - web
+      - db
       - redis
 
   celery-beat:
     build: .
+    container_name: default-beat
     command: ["celery", "-A", "config", "beat", "-l", "info"]
-    depends_on:
-      - redis
-      - db
-    env_file: .env
+    env_file:
+      - .env
     volumes:
-      - ./:/app
+      - .:/app
+    depends_on:
+      - db
+      - redis
 
   cronworker:
     build: .
+    container_name: default-cronworker
     command: ["celery", "-A", "config", "worker", "-l", "info", "-Q", "celery"]
-    depends_on:
-      - redis
-      - db
-    env_file: .env
+    env_file:
+      - .env
     volumes:
-      - ./:/app
-
+      - .:/app
+    depends_on:
+      - db
+      - redis
 
 volumes:
   db_data:
