--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "selenium (>=4.34.2,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
     "celery-progress (>=0.5,<0.6)",
+    "django-environ (>=0.12.0,<0.13.0)",
 ]
 
 
