--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,15 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_DB: zipshare
-      POSTGRES_USER: zipshare
-      POSTGRES_PASSWORD: changeme
+      POSTGRES_DB: default
+      POSTGRES_USER: default
+      POSTGRES_PASSWORD: secret
     volumes:
       - db_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U zipshare"]
+      test: ["CMD-SHELL", "pg_isready -U default"]
       interval: 10s
       timeout: 5s
       retries: 5
