--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "webdriver-manager (>=4.0.2,<5.0.0)",
     "celery-progress (>=0.5,<0.6)",
     "django-environ (>=0.12.0,<0.13.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "django-extensions (>=4.1,<5.0)",
 ]
 
 
