--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 
 addopts = --nomigrations --reuse-db
+markers =
+    selenium: selenium integration tests
