--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: { name: redis }
 spec:
-  selector: { matchLabels: { app: redis } }
   replicas: 1
+  selector: { matchLabels: { app: redis } }
   template:
     metadata: { labels: { app: redis } }
     spec:
@@ -16,5 +16,6 @@ apiVersion: v1
 kind: Service
 metadata: { name: redis }
 spec:
+  type: ClusterIP
+  ports: [{ port: 6379, targetPort: 6379 }]
   selector: { app: redis }
-  ports: [{ port: 6379 }]
